Set up db connection; added two endpoints with getDecks() and getNotes()
