# api/swagger/swagger.yaml
@@ -1,9 +1,9 @@
 swagger: "2.0"
 info:
   version: "0.0.1"
-  title: Hello World App
+  title: Modunote App
 # during dev, should point to your local machine
-host: localhost:10010
+host: localhost:10011
 # basePath prefixes all resource paths
 basePath: /
 #
@@ -18,6 +18,45 @@ consumes:
 produces:
   - application/json
 paths:
+  /decks:
+    x-swagger-router-controller: decks
+    get:
+      description: return decks available
+      operationId: getDecks
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            type: object
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /notes:
+    x-swagger-router-controller: notes
+    post:
+      description: return notes available
+      operationId: getNotes
+      parameters:
+        - name: filters
+          in: body
+          description: filter by deck id or tag; return all notes if not specified
+          required: false
+          schema:
+            type: object
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            type: object
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"            
   /hello:
     # binds a127 app logic to a route
     x-swagger-router-controller: hello_world
